--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,15 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link href="css/covidvisual.min.css" rel="stylesheet">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163923799-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-163923799-1');
+  </script>
 
 </head>
 
@@ -56,7 +65,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Total Cases</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">13835</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">14378</div>
                     </div>
                   </div>
                 </div>
@@ -69,7 +78,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Cured / Discharged</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">1766</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">1991</div>
                     </div>
                   </div>
                 </div>
@@ -82,7 +91,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Deaths</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">452</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">480</div>
                     </div>
                   </div>
                 </div>
