Added twitter button

--- a/src/index.html
+++ b/src/index.html
@@ -209,6 +209,11 @@
       <!-- Footer -->
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
+          <div class="text-center">
+            <button type="button" class="btn btn-twtr">
+              <a href="https://www.twitter.com/covidvisual" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i><span>Follow on Twitter</span></a>
+            </button>
+          </div>
           <div class="copyright text-center my-auto">
             <span>Copyright &copy; covidvisual.in 2020</span>
           </div>
