updated data and created PWA

--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,21 @@
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Total Cases</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">15712</div>
+                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Confirmed</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">16116</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-md-6 mb-4">
+              <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card-body">
+                  <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Active</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">13295</div>
                     </div>
                   </div>
                 </div>
@@ -95,8 +108,8 @@
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Cured / Discharged</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">2230</div>
+                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Recovered/Migrated</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">2302</div>
                     </div>
                   </div>
                 </div>
@@ -108,21 +121,8 @@
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Deaths</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">507</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-warning shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Migrated</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">1</div>
+                      <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Deceased</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">519</div>
                     </div>
                   </div>
                 </div>
