--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
 
           <!-- Content Row -->
           <div class="row">
-            <div class="col-xl-3 col-md-6 mb-4">
+            <div class="col-md-3 col-6 mb-4">
               <div class="card border-left-primary shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
@@ -90,8 +90,8 @@
               </div>
             </div>
 
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-primary shadow h-100 py-2">
+            <div class="col-md-3 col-6 mb-4">
+              <div class="card border-left-warning shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
@@ -103,12 +103,12 @@
               </div>
             </div>
 
-            <div class="col-xl-3 col-md-6 mb-4">
+            <div class="col-md-3 col-6 mb-4">
               <div class="card border-left-success shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Recovered/Migrated</div>
+                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Recovered / Migrated</div>
                       <div class="h5 mb-0 font-weight-bold text-gray-800">2302</div>
                     </div>
                   </div>
@@ -116,8 +116,8 @@
               </div>
             </div>
 
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-info shadow h-100 py-2">
+            <div class="col-md-3 col-6 mb-4">
+              <div class="card border-left-danger shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
