--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,6 @@
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
-
           <!-- Content Row -->
           <div class="row">
             <div class="col-md-3 col-6 mb-4">
@@ -83,7 +82,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Confirmed</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">16116</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="confirmed_count"></div>
                     </div>
                   </div>
                 </div>
@@ -96,7 +95,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Active</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">13295</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="active_count"></div>
                     </div>
                   </div>
                 </div>
@@ -109,7 +108,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Recovered / Migrated</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">2302</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="recovered_count"></div>
                     </div>
                   </div>
                 </div>
@@ -122,7 +121,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Deceased</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">519</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="deceased_count"></div>
                     </div>
                   </div>
                 </div>
@@ -133,7 +132,6 @@
           <!-- Content Row -->
 
           <div class="row">
-
             <div class="col-xl-6 col-lg-6">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
@@ -242,8 +240,7 @@
   <script src="vendor/d3/d3.min.js"></script>
   <!-- Custom scripts for all pages-->
   <script src="js/covidvisual.min.js"></script>
-  <script src="js/cases-daily.min.js"></script>
-  <script src="js/cases-total.min.js"></script>
+  <script src="js/cases.min.js"></script>
   <script src="js/tests-daily.min.js"></script>
   <script src="js/tests-total.min.js"></script>
 
