--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,33 @@
 
   <!-- Page Wrapper -->
   <div id="wrapper">
+
+    <!-- Sidebar -->
+    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+
+      <!-- Nav Item - Dashboard -->
+      <li class="nav-item active">
+        <a class="nav-link" href="/">
+          <span>Home</span></a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="important-links">
+          <span>Important Links</span></a>
+      </li>
+
+      <!-- Divider -->
+      <hr class="sidebar-divider d-none d-md-block">
+
+      <!-- Sidebar Toggler (Sidebar) -->
+      <div class="text-center d-none d-md-inline">
+        <button class="rounded-circle border-0" id="sidebarToggle"></button>
+      </div>
+
+    </ul>
+    <!-- End of Sidebar -->
+
+
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
 
@@ -240,9 +267,6 @@
   <script src="vendor/d3/d3.min.js"></script>
   <!-- Custom scripts for all pages-->
   <script src="js/covidvisual.min.js"></script>
-  <script src="js/cases.min.js"></script>
-  <script src="js/tests-daily.min.js"></script>
-  <script src="js/tests-total.min.js"></script>
 
 </body>
 
