sidebar closed on page load

--- a/src/important-links.html
+++ b/src/important-links.html
@@ -50,7 +50,7 @@
   <div id="wrapper">
 
     <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion toggled" id="accordionSidebar">
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
