--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link href="css/covidvisual.min.css" rel="stylesheet">
+  <script type="application/ld+json">{"@context":"http://schema.org","@type":"Organization","name":"ACME","url":"https://www.covidvisual.in","address":"","sameAs":["https://www.twitter.com/covidvisual"]}</script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
   <script>
