--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,14 @@
   <meta property="og:url" content="https://www.covidvisual.in/">
   <meta property="og:title" content="COVID-19 India Visual Tracker">
   <meta property="og:description" content="Tracking the spread and impact of Coronavirus (COVID-19) in India visually through interactive graphics and providing essential information on a localized level">
-  <meta property="og:image" content="img/web_screenshot.png">
+  <meta property="og:image" content="https://www.covidvisual.in/img/web_screenshot.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://www.covidvisual.in/">
   <meta property="twitter:title" content="COVID-19 India Visual Tracker">
   <meta property="twitter:description" content="Tracking the spread and impact of Coronavirus (COVID-19) in India visually through interactive graphics and providing essential information on a localized level">
-  <meta property="twitter:image" content="img/web_screenshot.png">
+  <meta property="twitter:image" content="https://www.covidvisual.in/img/web_screenshot.png">
 
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
