Added source links and disclaimer for ICMR data

--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,7 @@
                   <div class="chart-area">
                     <div id="covid-19-cases"></div>
                   </div>
+                  Source: <a href="https://www.mohfw.gov.in/">MoHFW</a><br>
                 </div>
               </div>
             </div>
@@ -186,6 +187,7 @@
                   <div class="chart-area">
                     <div id="covid-19-cases-daily"></div>
                   </div>
+                  Source: <a href="https://www.mohfw.gov.in/">MoHFW</a><br>
                 </div>
               </div>
             </div>
@@ -205,6 +207,8 @@
                   <div class="chart-area">
                     <div id="covid-19-tests"></div>
                   </div>
+                  Source: <a href="https://www.icmr.nic.in/">ICMR</a><br>
+                  * In case of missing data from ICMR for some dates, data is normalized between available dates using trends and daily testing nunmbers as reported by officials in press conferences
                 </div>
               </div>
             </div>
@@ -220,6 +224,8 @@
                   <div class="chart-area">
                     <div id="covid-19-tests-daily"></div>
                   </div>
+                  Source: <a href="https://www.icmr.nic.in/">ICMR</a><br>
+                  * In case of missing data from ICMR for some dates, data is normalized between available dates using trends and daily testing nunmbers as reported by officials in press conferences
                 </div>
               </div>
             </div>
