--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
                   <div class="chart-area">
                     <div id="covid-19-cases"></div>
                   </div>
-                  Source: <a href="https://www.mohfw.gov.in/">MoHFW</a><br>
+                  Source: <a href="https://www.mohfw.gov.in/" target="_blank">MoHFW</a><br>
                 </div>
               </div>
             </div>
@@ -187,7 +187,7 @@
                   <div class="chart-area">
                     <div id="covid-19-cases-daily"></div>
                   </div>
-                  Source: <a href="https://www.mohfw.gov.in/">MoHFW</a><br>
+                  Source: <a href="https://www.mohfw.gov.in/" target="_blank">MoHFW</a><br>
                 </div>
               </div>
             </div>
@@ -207,7 +207,7 @@
                   <div class="chart-area">
                     <div id="covid-19-tests"></div>
                   </div>
-                  Source: <a href="https://www.icmr.nic.in/">ICMR</a><br>
+                  Source: <a href="https://www.icmr.nic.in/" target="_blank">ICMR</a><br>
                   * In case of missing data from ICMR for some dates, data is normalized between available dates using trends and daily testing nunmbers as reported by officials in press conferences
                 </div>
               </div>
@@ -224,7 +224,7 @@
                   <div class="chart-area">
                     <div id="covid-19-tests-daily"></div>
                   </div>
-                  Source: <a href="https://www.icmr.nic.in/">ICMR</a><br>
+                  Source: <a href="https://www.icmr.nic.in/" target="_blank">ICMR</a><br>
                   * In case of missing data from ICMR for some dates, data is normalized between available dates using trends and daily testing nunmbers as reported by officials in press conferences
                 </div>
               </div>
