--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,8 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="css/covidvisual.min.css" rel="stylesheet">
-    <script type="application/ld+json">{"@context":"http://schema.org","@type":"Organization","name":"ACME","url":"https://www.covidvisual.in","address":"","sameAs":["https://www.twitter.com/covidvisual"]}</script>
+    <script type='application/ld+json'>{"@context":"http://www.schema.org","@type":"WebSite",name:"Covid Visual",url:"https://www.covidvisual.in",sameAs:["https://www.twitter.com/covidvisual"]}</script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
     <script>
@@ -213,7 +214,7 @@
                       <div id="covid-19-tests"></div>
                     </div>
                     Source: <a href="https://www.icmr.nic.in/" target="_blank">ICMR</a><br>
-                    * In case of missing data from ICMR for some dates, data is normalized between available dates using trends and daily testing nunmbers as reported by officials in press conferences
+                    * In case of missing data from ICMR for some dates, data is normalized between available dates using trends and daily testing numbers as reported by officials in press conferences
                   </div>
                 </div>
               </div>
@@ -230,7 +231,7 @@
                       <div id="covid-19-tests-daily"></div>
                     </div>
                     Source: <a href="https://www.icmr.nic.in/" target="_blank">ICMR</a><br>
-                    * In case of missing data from ICMR for some dates, data is normalized between available dates using trends and daily testing nunmbers as reported by officials in press conferences
+                    * In case of missing data from ICMR for some dates, data is normalized between available dates using trends and daily testing numbers as reported by officials in press conferences
                   </div>
                 </div>
               </div>
