Added state data

--- a/src/important-links.html
+++ b/src/important-links.html
@@ -57,7 +57,6 @@
           <a class="nav-link" href="/">
             <span>Home</span></a>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="important-links">
             <span>Important Links</span></a>
@@ -96,7 +95,7 @@
 
           <!-- <div class="sidebar"> -->
             <a class="topbar-brand d-flex align-items-center justify-content-center" href="/">
-              <div class="mx-3">Covid Visual</sup></div>
+              <div class="mx-3">Covid Visual</div>
             </a>
           <!-- </div> -->
 
