--- a/src/coronavirus-helpline-numbers.html
+++ b/src/coronavirus-helpline-numbers.html
@@ -75,7 +75,7 @@
             </button>
             <!-- <div class="sidebar"> -->
             <a class="topbar-brand d-flex align-items-center justify-content-center" href="/">
-              <div class="mx-3">Covid Visual</sup></div>
+              <div class="mx-3">Covid Visual</div>
             </a>
             <!-- </div> -->
           </nav>
